--- a/code.html
+++ b/code.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>APP NAME: Coding Challenge by Danny Schellenberger</title>
+    <title>Hundo: Coding Challenge by Danny Schellenberger</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -61,7 +61,7 @@
             height="40"
             class="d-inline-block"
           />
-          <span class="mx-3" id="appName">APP NAME</span></a
+          <span class="mx-3" id="appName">Hundo</span></a
         >
         <button
           class="navbar-toggler"
@@ -84,10 +84,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page"  href="/app.html">The App</a>
+              <a class="nav-link" href="/app.html">The App</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/code.html">The Code</a>
+              <a class="nav-link active" aria-current="page" href="/code.html">The Code</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">The Repo</a>
