--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>APP NAME: Coding Challenge by Danny Schellenberger</title>
+    <title>Hundo: Coding Challenge by Danny Schellenberger</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -56,7 +56,7 @@
             height="40"
             class="d-inline-block"
           />
-          <span class="mx-3" id="appName">APP NAME</span></a
+          <span class="mx-3" id="appName">Hundo</span></a
         >
         <button
           class="navbar-toggler"
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-12 col-lg-6 order-last order-lg-first px-lg-5 mt-5 mt-lg-0" id="info">
             <h1>APP NAME: A Coding Challenge</h1>
-            <h4 class="lead mt-4 mb-3">Your Project Description</h4>
+            <h4 class="lead mt-4 mb-3">Livin' life one loop at a time</h4>
             <ul class="checklist">
               <li>
                 <i class="bi bi-check-square-fill"></i> CSS & Bootstrap Layout
